# ghgpy

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  main.py  mkdocs.yml  notebook.ipynb  notebooks.ipynb  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
about/: index.html
activities/: afolu.py  energy.py  ippu.py  waste.py
data/: database.xlsx  db.py  fuel.py  unit_converters.py
devdocs/: index.html
docs/: about.md  getting_started.md  index.md  license.md  patch_history.md  reference.md
getting_started/: index.html
license/: index.html
patch_history/: index.html
reference/: index.html
search/: search_index.json
site/: 404.html  index.html  objects.inv  search.html
site/about/: index.html
site/getting_started/: index.html
site/patch_history/: index.html
site/reference/: index.html
site/search/: search_index.json
src/ghgpy/: __init__.py  factory.py
src/ghgpy/activities/: energy.py  ippu.py
src/ghgpy/data/: efs.py  emissionfactors.py  fuels.py  ghg.py  ghggases.py
src/ghgpy/datamodel/: db.py  electricity.py  fuel.py  ghg.py  ghggas.py  material.py  unit_converters.py  unumber.py
src/ghgpy/scope2/: electricity.py
tests/: ghgpy_test.py
